--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "laravel/lumen-framework": "5.0.*",
         "vlucas/phpdotenv": "~1.0",
-        "fabpot/goutte": "~2.0"
+        "fabpot/goutte": "~2.0",
+        "dandelionmood/lastfm": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
